--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,24 @@
             <p class="hero__text">
                 O maior evento de tecnologia do Brasil começa em 30d 17h 20min 56s
             </p>
+        <div class="infos-bar">
+            <ul class="infos-bar__infos">
+                <li class="infos-bar__infos__item">
+                    <b>Localização</b>
+                    Allianz Parque - Barra Funda - São Paulo/SP
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Preço</b>
+                    A partir de R$ 129,00
+                </li>
+                <li class="infos-bar__infos__item">
+                    <b>Quando</b>
+                    10/10/2024
+                </li>
+            </ul>
+            <a href="#" class="button button--primary">Garanta sua vaga</a>
         </div>
+    </div>
     </header>
 
     <script src="scripts/main.js"></script>
