--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,18 @@
     </div>
     </header>
 
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-End</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, inventore aliquid harum dicta quam minima tempore velit. Animi, ullam sequi autem facilis quam, quasi, nisi at eum minima quod illo.
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+    </section>
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
