--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <header class="hero">
@@ -36,8 +37,8 @@
     </div>
     </header>
 
-    <section class="event">
-        <div class="container">
+    <section class="event event--frontend">
+        <div class="container" data-aos="fade-right">
             <div class="event__details">
                 <h2 class="event__details__title">Front-End</h2>
                 <p class="event__details__description">
@@ -47,7 +48,41 @@
             <img class="event__image" src="./images/frontend.png" alt="Front-End">
         </div>
     </section>
+    <section class="event event--ui-ux">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">UI/UX</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, inventore aliquid harum dicta quam minima tempore velit. Animi, ullam sequi autem facilis quam, quasi, nisi at eum minima quod illo.
+                </p>
+            </div>
+            <img class="event__image" src="./images/ui-ux.png" alt="Front-End">
+        </div>
+    </section>
+    <section class="event event--data-science">
+        <div class="container" data-aos="fade-right">
+            <div class="event__details">
+                <h2 class="event__details__title">Data Science</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, inventore aliquid harum dicta quam minima tempore velit. Animi, ullam sequi autem facilis quam, quasi, nisi at eum minima quod illo.
+                </p>
+            </div>
+            <img class="event__image" src="./images/data.png" alt="Front-End">
+        </div>
+    </section>
+    <section class="event event--backend">
+        <div class="container" data-aos="fade-left">
+            <div class="event__details">
+                <h2 class="event__details__title">BackEnd</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, inventore aliquid harum dicta quam minima tempore velit. Animi, ullam sequi autem facilis quam, quasi, nisi at eum minima quod illo.
+                </p>
+            </div>
+            <img class="event__image" src="./images/backend.png" alt="Front-End">
+        </div>
+    </section>
 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
