--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 30d 17h 20min 56s
+                O maior evento de tecnologia do Brasil começa em <span id="timers"></span>
             </p>
         <div class="infos-bar">
             <ul class="infos-bar__infos">
